@@ -4,6 +4,8 @@ Changelog
 5.4.5 (2016-XX-XX)
 ------------------
 
+ * deprecated the mail transport
+
 5.4.4 (2016-11-23)
 ------------------
 
